fixes gaps

--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -9,6 +9,7 @@
 
 .contactName {
     margin-right: 20px;
+    margin-bottom: 0;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -17,6 +18,7 @@
 }
 
 .contactNumber {
+    margin-bottom: 0;
     display: flex;
     justify-content: flex-start;
     align-items: center;
