--- a/src/components/contactlist/contactlist.module.css
+++ b/src/components/contactlist/contactlist.module.css
@@ -4,7 +4,6 @@
     display: grid;
     grid-template-columns: repeat(1fr);
     grid-auto-rows: auto;
-    row-gap: 20px;
-    column-gap: 10px;
+    row-gap: 5px;    
     width: 100%;
 }
